# scam-gui

./: .gitignore  CMakeLists.txt  README.md  canvas.cpp  canvas.hpp  canvasarea.cpp  canvasarea.hpp  colorpicker.cpp  colorpicker.hpp  gitrepo.cpp  gitrepo.hpp  gitrepopicker.cpp  gitrepopicker.hpp  intensity.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  signaturedialog.cpp  signaturedialog.hpp
